--- a/src/main/java/conf/DbCfg.yaml
+++ b/src/main/java/conf/DbCfg.yaml
@@ -1,6 +1,7 @@
-dbUrl: "jdbc:mysql://127.0.0.1:3306/hello_3"
-usr: "root"
-pwd: "123456"
+dbUrl: jdbc:mysql://127.0.0.1:3306/hello_8
+usr: root
+pwd: 123456
+entityPackage: entity4test
 
 
 
